change some texts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Xin chao C1124L1</h1>
 <p>Hom nay hoc ve git va html</p>
-<img src="https://d1hjkbq40fs2x4.cloudfront.net/2016-01-31/files/1045.jpg" alt="ảnh tuyết"><br>
+<img src="https://d1hjkbq40fs2x4.cloudfront.net/2016-01-31/files/1045.jpg" alt="ảnh bầu trời"><br>
 <img src="47d2a899b2398d41a4fea543c06670f7.jpg" alt="ảnh anime" width="800" height="500"><br>
 <a href="https://meet.google.com/gcg-ybhh-gmp?pli=1">Link gg meet</a>
 </body>
